//
// Copyright (C) 2010 Google Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto2";

package google.gson.protobuf.generated;
option java_package = "com.google.gson.protobuf.generated";

import "google/protobuf/descriptor.proto";

extend google.protobuf.FieldOptions {
  // Indicates a field name that overrides the default for serialization
  optional string serialized_name = 92066888;
}

extend google.protobuf.EnumValueOptions {
  // Indicates a field value that overrides the default for serialization
  optional string serialized_value = 92066888;
}
